--- a/views/phonebook.jade
+++ b/views/phonebook.jade
@@ -1,14 +1,37 @@
-.container(style='margin-top: 30px')
+.container(style='margin-top: 30px', ng-controller="MainCtrl")
   .jumbotron
     .text-center
-      h1(align='center') Simple Phonebook App
+      h1(align='center') Simple Phonebook App - Angular JS
       h3
         | An&nbsp;
         a(href='https://angularjs.org/', target='_blank') AngularJS
-        | driven application created with
+        |&nbsp;driven application created with
         a(href='http://getbootstrap.com/', target='_blank')&nbsp;Bootstrap
     br
     .form-group.text-center
-      a.btn.btn-primary.btn-md(href='/contact')
+      button.btn.btn-primary.btn-md(ng-click="addContact()")
         span.glyphicon.glyphicon-plus(aria-hidden="true")
         |&nbsp;Add New Contact
+
+    .row.text-center
+      .col-sm-12
+        .alert(class="alert-{{notification.class}}" ng-bind="'Oops! ' + notification.message")
+        #contacts-wrapper
+          table.table.text-left(ng-show="contacts.length", class="ng-hide")
+            thead
+              tr(style="font-weight: bold")
+                td Contact Name
+                td Contact Number
+                td.text-center Actions
+            tbody
+              tr(ng-repeat="contact in contacts")
+                td(ng-bind="contact.name")
+                td(ng-bind="contact.number")
+                td.text-center
+                  button.btn.btn-primary.btn-sm(ng-click="editContact($index)")
+                    span.glyphicon.glyphicon-pencil
+                    |&nbsp;Edit
+                  |&nbsp;
+                  button.btn.btn-danger.btn-sm(ng-click="deleteContact($index)")
+                    span.glyphicon.glyphicon-trash
+                    |&nbsp;Delete
