Changed header title in homepage

--- a/views/phonebook.jade
+++ b/views/phonebook.jade
@@ -1,7 +1,7 @@
 .container(style='margin-top: 30px', ng-controller="MainCtrl")
   .jumbotron
     .text-center
-      h1(align='center') Simple Phonebook App - Angular JS
+      h1(align='center') Phonebook App - AngularJS
       h3
         | An&nbsp;
         a(href='https://angularjs.org/', target='_blank') AngularJS
