Added notification upon successful deletion of contact

--- a/views/phonebook.jade
+++ b/views/phonebook.jade
@@ -50,6 +50,6 @@
                     span.glyphicon.glyphicon-pencil
                     |&nbsp;Edit
                   |&nbsp;
-                  button.btn.btn-danger.btn-sm(ng-click="deleteContact($index)")
+                  button.btn.btn-danger.btn-sm(ng-click="deleteContact($index, contact.name)")
                     span.glyphicon.glyphicon-trash
                     |&nbsp;Delete
