Transferred footer to contact template

--- a/views/phonebook.jade
+++ b/views/phonebook.jade
@@ -73,3 +73,9 @@
                   button.btn.btn-danger.btn-sm(ng-click="deleteContact($index, contact.name)")
                     span.glyphicon.glyphicon-trash
                     |&nbsp;Delete
+  .row
+    footer.footer
+      .container.text-right
+        p.text-muted
+          | &copy;&nbsp;
+          a(href='https://github.com/shiftescape/phonebook-angular', target='_blank') Alvin James N. Bellero
